v0.2.2 - Small style changes (pink -> gold) - Fixed Ranking bug on mobile and made it more user-friendly on PC

--- a/src/app/main/main.component.css
+++ b/src/app/main/main.component.css
@@ -14,6 +14,26 @@ input {
     /* background-color: #FFC727; */
 }
 
+.mat-form-field.mat-focused .mat-form-field-label {
+    color: #FFC727;
+}
+
+.mat-select-placeholder:focus {
+    color: #FFC727;
+}
+
+.mat-form-field .mat-focused .mat-primary .mat-select-arrow {
+    color: #FFC727 !important;
+}
+
+.mat-form-field .mat-focused .mat-form-field-label {
+    color: #FFC727 !important;
+}
+
+.mat-select-placeholder {
+    transition: color .4s .133s cubic-bezier(.25,.8,.25,1);
+}
+
 mat-vertical-stepper {
     /* background-color: transparent; */
     color: #CC9910;
